--- a/downstream/modules/platform/ref-controller-node-types.adoc
+++ b/downstream/modules/platform/ref-controller-node-types.adoc
@@ -12,4 +12,4 @@ You can configure four types of nodes in an {ControllerName} deployment:
 However, for an operator-based environment, there are no hybrid or control nodes. 
 There are container groups, which make up containers running on the Kubernetes cluster. 
 That comprises the control plane. 
-That control plane is local to the kubernetes cluster in which Red Hat Ansible Automation Platform is deployed. 
+That control plane is local to the Kubernetes cluster in which {PlatformName} is deployed. 
