AAP-20958: Created docs for Lightspeed on-premise deployment feature and incorporated peer feedback

--- a/lightspeed/modules/con_overview-lightspeed-onpremise.adoc
+++ b/lightspeed/modules/con_overview-lightspeed-onpremise.adoc
@@ -33,9 +33,9 @@ You must also have a trial or paid subscription to {ibmwatsonxcodeassistant}, an
 
 == Prerequisites
 
-* You have administrator privileges to the {PlatformName}.
+* You have administrator privileges for {PlatformName}.
 
-* Your organization has a trial or paid subscription to both the {PlatformName} and {ibmwatsonxcodeassistant}.
+* Your organization has a trial or paid subscription to both {PlatformName} and {ibmwatsonxcodeassistant}.
 
 * Your system meets the minimum system requirements to set up {LightspeedshortName} on-premise deployment.
 
@@ -47,7 +47,7 @@ For information about obtaining an API key and model ID from {ibmwatsonxcodeassi
 
 == Process for configuring a {LightspeedshortName} on-premise deployment
 
-Perform the following tasks to install and configure a {LightspeedshortName} on-premise deployment: <GIVE URLs>
+Perform the following tasks to install and configure a {LightspeedshortName} on-premise deployment:
 
 . xref:install-aap-lightspeed-operator_configuring-lightspeed-onpremise[Install the {PlatformName} operator]
 
