--- a/lightspeed/modules/proc_create-lightspeed-instance.adoc
+++ b/lightspeed/modules/proc_create-lightspeed-instance.adoc
@@ -17,7 +17,7 @@ Use this procedure to create and deploy a {LightspeedShortName} instance to your
 . Locate and select the *{PlatformNameShort} (provided by Red Hat)* operator that you installed earlier.
 . Select *All instances → Create new*.
 . From the *Create new* list, select the *Ansible Lightspeed* modal.
-. Ensure that *Form view* is selected as the configuration mode. 
+. Ensure that you have selected *Form view* as the configuration mode. 
 . Provide the following information:
 .. *Name*: Enter a unique name for your {LightspeedShortName} instance.
 .. *Secret where the authentication information can be found*: Select the authentication secret that you created to connect to the {PlatformName}.
