--- a/lightspeed/modules/proc_create-oauth-app.adoc
+++ b/lightspeed/modules/proc_create-oauth-app.adoc
@@ -7,10 +7,10 @@
 Use this procedure to create an OAuth application for your {LightspeedShortName} on-premise deployment. 
 
 .Prerequisites
-* You have an operational Ansible automation controller instance.
+* You have an operational Ansible {ControllerName} instance.
 
 .Procedure
-. Log in to the automation controller as an administrator.
+. Log in to the {ControllerName} as an administrator.
 . Under *Administration*, click *Applications > Add*. 
 . Enter the following information:
 .. *Name*: Specify a unique name for your application.
