--- a/lightspeed/modules/proc_install-aap-lightspeed-operator.adoc
+++ b/lightspeed/modules/proc_install-aap-lightspeed-operator.adoc
@@ -7,7 +7,7 @@
 Use this procedure to install the {PlatformNameShort} operator on the {OCP}. 
 
 .Prerequisites
-* You have installed and configured automation controller.
+* You have installed and configured {ControllerName}.
 
 .Procedure
 
