--- a/lightspeed/assemblies/assembly_configuring-lightspeed-onpremise.adoc
+++ b/lightspeed/assemblies/assembly_configuring-lightspeed-onpremise.adoc
@@ -10,7 +10,7 @@ ifdef::context[:parent-context: {context}]
 
 [role="_abstract"]
 
-As an {PlatformName} administrator, you can set up {LightspeedShortName} on-premise deployment and connect it to an {ibmwatsonxcodeassistant} instance. After the on-premise deployment is successful, you can start using the Ansible Lightspeed service by using Ansible Visual Studio (VS) Code extension. 
+As an {PlatformName} administrator, you can set up a {LightspeedShortName} on-premise deployment and connect it to an {ibmwatsonxcodeassistant} instance. After the on-premise deployment is successful, you can start using the Ansible Lightspeed service with the Ansible Visual Studio (VS) Code extension. 
 
 The following capabilities are not yet supported on {LightspeedShortName} on-premise deployment:
 
