--- a/lightspeed/assemblies/assembly_setting-up-lightspeed.adoc
+++ b/lightspeed/assemblies/assembly_setting-up-lightspeed.adoc
@@ -11,7 +11,7 @@ ifdef::context[:parent-context: {context}]
 
 [role="_abstract"]
 
-As a Red Hat customer portal administrator, you must configure {LightspeedShortName} to connect to your {ibmwatsonxcodeassistant} instance. This chapter provides information about configuring both {LightspeedShortName} cloud service and on-premise deployment.
+As a Red Hat customer portal administrator, you must configure {LightspeedShortName} to connect to your {ibmwatsonxcodeassistant} instance. This chapter provides information about configuring both the {LightspeedShortName} cloud service and on-premise deployment.
 
 include::modules/con_wca-key-model-id.adoc[leveloffset=+1]
 include::assembly_configure-code-assistant.adoc[leveloffset=+1]
