Applying PR suggestions

--- a/downstream/assemblies/platform/assembly-configure-aap-operator.adoc
+++ b/downstream/assemblies/platform/assembly-configure-aap-operator.adoc
@@ -4,7 +4,7 @@ ifdef::context[:parent-context: {context}]
 
 :context: configure-aap-operator
 
-= Configuring the {PlatformName} operator on {OCP}
+= Configuring the {OperatorPlatform} on {OCP}
 
 The central configuration for {PlaformNameShort} allows you to manage the following {PlatformNameShort} components form a single user interface:
 
@@ -13,10 +13,10 @@ The central configuration for {PlaformNameShort} allows you to manage the follow
 * {EDAName}
 * {LightspeedShortName} (This feature is disabled by default, you must opt in to use it.)
 
-Before you can deploy the central configuration you need to have {PlatformNameShort} operator installed in a namespace. 
-If you have not installed {PlatformNameShort} operator see <<Installing the Red Hat Ansible Automation Platform operator on Red Hat OpenShift Container Platform>>.
+Before you can deploy the central configuration you need to have {OperatorPlatform} installed in a namespace. 
+If you have not installed {OperatorPlatform} see <<Installing the Red Hat Ansible Automation Platform operator on Red Hat OpenShift Container Platform>>.
 
-If you have the {PlatformNameShort} operator and some or all of the {PlatformNameShort} components installed see <<Deploying your central configuration with existing {PlatformNameShort} components>> for how to proceed. 
+If you have the {OperatorPlatform} and some or all of the {PlatformNameShort} components installed see <<Deploying your central configuration with existing {PlatformNameShort} components>> for how to proceed. 
 
 include::platform/proc-operator-link-components.adoc[leveloffset=+1]
 include::platform/proc-operator-access-aap.adoc[leveloffset=+1]
