--- a/downstream/modules/platform/proc-operator-aap-troubleshooting.adoc
+++ b/downstream/modules/platform/proc-operator-aap-troubleshooting.adoc
@@ -4,7 +4,7 @@
 
 * You can follow along in the command line while the operator is reconciling, this can be helpful for debugging.
 ** Alternatively you can click into the deployment instance to see the status conditions being updated as the deployment goes on.
-* When troubleshooting you should look at the *AnsibleAutomationPlatform* instance for the main logs and then each individual component (*EDA*, *AutomationHub*, *AutomationController*) for more specific information. 
+* When troubleshooting you should examine the *AnsibleAutomationPlatform* instance for the main logs and then each individual component (*EDA*, *AutomationHub*, *AutomationController*) for more specific information. 
 * To display status conditions click into the instance, and look under the *Details* or *Events* tab.
 ** Alternatively, to display the status conditions you can run the get command:
 +
