--- a/downstream/modules/platform/proc-operator-access-aap.adoc
+++ b/downstream/modules/platform/proc-operator-access-aap.adoc
@@ -12,7 +12,7 @@ To access your *AnsibleAutomationPlatform* instance:
 . Click the link under *Location* for *AnsibleAutomationPlatform*.
 . This redirects you to the *AnsibleAutomationPlatform* login page. Enter your username in the *Username* field.
 . For the password you need to:
-.. Navigate to menu:Workloads[Secrets].
+.. Go to to menu:Workloads[Secrets].
 .. Click btn:[<your instance name>-admin-password] and copy the password. 
 .. Paste the password into the *Password* field.
 . Click btn:[Login].
