--- a/downstream/modules/platform/proc-operator-deploy-central-config.adoc
+++ b/downstream/modules/platform/proc-operator-deploy-central-config.adoc
@@ -7,7 +7,7 @@ The following procedure simulates a scenario where you have {ControllerName} as 
 
 .Procedure 
 . Log in to {OCP}.
-. Navigate to menu:Operators[Installed Operators].
+. Go to to menu:Operators[Installed Operators].
 . Click btn:[Subscriptions] and edit your *Update channel* to *stable-2.5*.
 . Click btn:[Details] and on the *AnsibleAutomationPlatform* tile click btn:[Create instance].
 . From the *Create AnsibleAutomationPlatform* page enter a name for your instance in the *Name* field.
@@ -50,7 +50,7 @@ apiVersion: aap.ansible.com/v1alpha1
 . Click btn:[Create].
 . To access your new instance, see <<Accessing your central configuration>>.
 
-NOTE: If you have an existing controller with a managed postgres pod, after creating the *AnsibleAutomationPlatform* resource your controller instance will continue to use that original postgres pod. If you were to do a fresh install you would have a single postgres managed pod for all instances. 
+NOTE: If you have an existing controller with a managed Postgres pod, after creating the *AnsibleAutomationPlatform* resource your {ControllerName} instance will continue to use that original Postgres pod. If you were to do a fresh install you would have a single Postgres managed pod for all instances. 
 
 
 
