--- a/downstream/modules/platform/proc-operator-link-components.adoc
+++ b/downstream/modules/platform/proc-operator-link-components.adoc
@@ -2,11 +2,11 @@
 
 = Linking your components to the central configuration  
 
-Once you have the {PlatformNameShort} operator installed in your namespace you can set up your *AnsibleAutomationPlatform* instance.
+Once you have the {OperatorPlatform} installed in your namespace you can set up your *AnsibleAutomationPlatform* instance.
 Then link all the platform components to a single user interface. 
 
 .Procedure 
-. Go to your {PlatformNameShort} operator and click btn:[Details]. 
+. Go to your {OperatorPlatform} and click btn:[Details]. 
 . On the *AnsibleAutomationPlatform* tile click btn:[Create instance].
 . From the *Create AnsibleAutomationPlatform* page enter a name for your instance in the *Name* field.
 . Click btn:[YAML view] and paste the following:
@@ -29,7 +29,7 @@ spec:
 . Click btn:[Create].
 
 .Verification
-To verify if all instances deployed correctly go to your Ansible Automation Platform operator deployment and click btn:[All instances].
+To verify if all instances deployed correctly go to your {OperatorPlatform} deployment and click btn:[All instances].
 Here you will see the *AnsibleAutomationPlatform* instance and the *AutomationController*, *EDA*, and *AutomationHub* instances deployed.
 
-Alternatively you can check via the command line, run: `oc get route` 
+Alternatively you can check by the command line, run: `oc get route` 
