--- a/lightspeed/modules/proc_generate-playbook.adoc
+++ b/lightspeed/modules/proc_generate-playbook.adoc
@@ -14,15 +14,16 @@ You can use the natural language interface in the Ansible VS Code extension to g
 .Procedure
 
 . Log in to VS Code with your Red Hat account.
-. From the navigation menu, click the *Ansible* icon. 
+. From the *Activity* bar, click the *Ansible* icon. 
 . Under *Ansible Creator*, click *Get started*.  The *Ansible Content Creator* page is displayed. 
 +
 The following illustration displays the *Ansible Content Creator* page:
 +
-.Settings to create Ansible content
-image::lightspeed-create-ansible-content.png[Settings to create Ansible content]
+.Settings to create Ansible playbooks
+[.thumb]
+image::lightspeed-create-ansible-content.png[Settings to create Ansible playbooks]
 
-. Select the *Create ansible content* tile. The *Create a playbook* page is displayed.
+. Select the *Playbook with Ansible Lightspeed* tile. The *Create a playbook* page is displayed.
 
 . In the *What do you want the playbook to accomplish?* field, enter the prompts to create a playbook and click *Analyze*.
 +
@@ -38,8 +39,6 @@ After a few seconds, the recommended steps for your playbook intent are displaye
 . After you verify the steps, click *Generate playbook*. 
 +
 It takes a few seconds for the playbook to generate, and *The following playbook was generated for you* field displays the newly generated playbook.
-
-. Optional: If required, modify the generated playbook recommendations to suit your intent.
 
 . Click *Open editor*. The generated playbook opens as an untitled YAML file in the VS Code editor.
 
