--- a/lightspeed/assemblies/assembly_generating-playbooks.adoc
+++ b/lightspeed/assemblies/assembly_generating-playbooks.adoc
@@ -10,13 +10,13 @@ ifdef::context[:parent-context: {context}]
 
 [role="_abstract"]
 
-Using the Ansible VS Code extension, you can create Ansible playbooks using a natural language interface in English. {LightspeedFullName} reads the natural language prompts, identifies the context for the playbook, and generates an entire playbook recommendation based on your  intent. You can also view the explanations for new or existing playbooks. The playbook explanations describe what the playbook does and contextualize its impact.
+Using the Ansible VS Code extension, you can create Ansible playbooks using a natural language interface in English. {LightspeedFullName} reads the natural language prompts and generates an entire playbook recommendation based on your  intent. You can also view the explanations for new or existing playbooks. The playbook explanations describe what the playbook does and contextualize its impact.
 
 These capabilities enable Ansible developers to use natural language prompts to create new Ansible playbooks quickly and more efficiently and also get an explanation for existing Ansible playbook, thereby reducing the overall onboarding learning period. For information about Ansible playbooks, see the link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/getting_started_with_ansible_playbooks/index[Getting started with Ansible Playbooks] guide.
 
 [NOTE]
 ====
-You can generate playbooks and view playbook explanations on {LightspeedShortName} cloud service, and not on on-premise deployment.
+You can generate playbooks and view playbook explanations when connecting to the {LightspeedShortName} cloud service. These features are not yet available with {LightspeedShortName} on-premise deployments.
 ====
 
 include::modules/con_playbook-generation-best-practices.adoc[leveloffset=+1]
