--- a/lightspeed/titles/lightspeed-release-notes/modules/lightspeed-rn-june2024.adoc
+++ b/lightspeed/titles/lightspeed-release-notes/modules/lightspeed-rn-june2024.adoc
@@ -9,7 +9,7 @@ This release includes several enhancements, additions, and fixes that have been 
 
 * *{LightspeedShortName} on-premise deployment*
 +
-{LightspeedShortName} is now available for on-premise deployments. This capability provides the {PlatformName} customers more control over their data and supports compliance with enterprise security policies. For example, organizations in sensitive industries with data privacy or air-gapped requirements can use on-premise deployments of both {LightspeedShortName} and {ibmwatsonxcodeassistant} for {LightspeedShortName} on Cloud Pak for Data. {LightspeedShortName} on-premise deployments are supported on {PlatformName} version 2.4.
+{LightspeedShortName} is now available for on-premise deployments. This capability provides the {PlatformName} customers more control over their data and supports compliance with enterprise security policies. For example, organizations in sensitive industries with data privacy or air-gapped requirements can use on-premise deployments of both {LightspeedShortName} and {ibmwatsonxcodeassistant} for {LightspeedShortName} on Cloud Pak for Data. {LightspeedShortName} on-premise deployments are supported on {PlatformName} version 2.4. For more information, see link:https://docs.redhat.com/en/documentation/red_hat_ansible_lightspeed_with_ibm_watsonx_code_assistant/2.x_latest/html-single/red_hat_ansible_lightspeed_with_ibm_watsonx_code_assistant_user_guide/index#configuring-lightspeed-onpremise_set-up-lightspeed[Setting up Red Hat Ansible Lightspeed on-premise deployment].
 +
 [NOTE]
 ====
@@ -21,5 +21,5 @@ The following capabilities are not yet available on {LightspeedShortName} on-pre
 
 * *Playbook generation and explanations*
 +
-Using the Ansible VS Code extension, you can create Ansible playbooks using a natural language interface in English. {LightspeedShortName} with {ibmwatsonxcodeassistant} reads the natural language prompts and generates an entire playbook recommendation based on your intent. You can also view the explanations for new or existing playbooks. The playbook explanations describe what the playbook or task within the playbook does and contextualize its impact.
+Using the Ansible VS Code extension, you can create Ansible playbooks using a natural language interface in English. {LightspeedShortName} with {ibmwatsonxcodeassistant} reads the natural language prompts and generates an entire playbook recommendation based on your intent. You can also view the explanations for new or existing playbooks. The playbook explanations describe what the playbook or task within the playbook does and contextualize its impact. For more information, see link:https://docs.redhat.com/en/documentation/red_hat_ansible_lightspeed_with_ibm_watsonx_code_assistant/2.x_latest/html-single/red_hat_ansible_lightspeed_with_ibm_watsonx_code_assistant_user_guide/index#generating-playbooks_lightspeed-user-guide[Generating playbooks and viewing playbook explanations].
 
