Adding PR suggestions

--- a/downstream/modules/platform/proc-operator-aap-faq.adoc
+++ b/downstream/modules/platform/proc-operator-aap-faq.adoc
@@ -3,9 +3,9 @@
 = Frequently asked questions on platform gateway  
 
 If I delete my Ansible Automation Platform deployment will I still have access to Automation Controller?::
-No, {ControllerName}, {HubName}, and {EDAName} are nested within the deployment and will be deleted also.
+No, {ControllerName}, {HubName}, and {EDAName} are nested within the deployment and are also deleted.
 
-Something went wrong with my deployment but I'm now sure what, how can I find out?::
+Something went wrong with my deployment but I'm not sure what, how can I find out?::
 You can follow along in the command line while the operator is reconciling, this can be helpful for debugging. 
 Alternatively you can click into the deployment instance to see the status conditions being updated as the deployment goes on.
 
