--- a/downstream/assemblies/platform/assembly-configure-aap-operator.adoc
+++ b/downstream/assemblies/platform/assembly-configure-aap-operator.adoc
@@ -6,7 +6,7 @@ ifdef::context[:parent-context: {context}]
 
 = Configuring the {OperatorPlatform} on {OCP}
 
-The platform gateway for {PlaformNameShort} allows you to manage the following {PlatformNameShort} components form a single user interface:
+The platform gateway for {PlaformNameShort} enables you to manage the following {PlatformNameShort} components to form a single user interface:
 
 * {ControllerNameStart}
 * {HubNameStart}
