--- a/downstream/modules/platform/proc-aap-platform-gateway-restore.adoc
+++ b/downstream/modules/platform/proc-aap-platform-gateway-restore.adoc
@@ -1,3 +1,3 @@
 [id="aap-platform-gateway-restore"]
 
-= Recovering a Red Hat Ansible Automation Platform deployment
+= Recovering your AnsibleAutomationPlatform resource
