--- a/lightspeed/modules/con_ansible-content-parser.adoc
+++ b/lightspeed/modules/con_ansible-content-parser.adoc
@@ -2,7 +2,7 @@
 
 [id="ansible-content-parser_{context}"]
 
-= Creating a training data set by using {AnsibleContentParser}
+= Creating a training data set by using the {AnsibleContentParser}
 
 [role="_abstract"]
 
@@ -30,7 +30,7 @@ The {AnsibleContentParser} scans the following directories and file formats:
 == Process of creating a training data set
 To create a custom model training data set, perform the following tasks:
 
-. xref:install-content-parser_configuring-custom-models[Install {AnsibleContentParser} on your computer]
+. xref:install-content-parser_configuring-custom-models[Install the {AnsibleContentParser} on your computer]
 
 . xref:generate-training-data-set_configuring-custom-models[Generate a custom model training data set]
 
