--- a/lightspeed/modules/proc_install-content-parser.adoc
+++ b/lightspeed/modules/proc_install-content-parser.adoc
@@ -2,7 +2,7 @@
 
 [id="install-content-parser_{context}"]
 
-= Installing {AnsibleContentParser}
+= Installing the {AnsibleContentParser}
 
 Install the {AnsibleContentParser}, a command-line interface (CLI) tool, on your computer. 
 
@@ -24,7 +24,7 @@ NOTE: Installation of the {AnsibleContentParser} on Microsoft Windows OS is not 
 +
 `$ source ./venv/bin/activate`
 
-. Install the latest version of {AnsibleContentParser} from the `pip` repository:
+. Install the latest version of the {AnsibleContentParser} from the `pip` repository:
 +
 `$ pip install --upgrade pip`
 +
