--- a/lightspeed/modules/proc_configure-custom-models-lightspeed.adoc
+++ b/lightspeed/modules/proc_configure-custom-models-lightspeed.adoc
@@ -14,7 +14,7 @@ You can configure the custom model as the default model for your organization. A
 
 * *Enable access for select Ansible users in your organization*
 +
-Using the *model-override* setting, you can configure the custom model and make it available for select Ansible users only. For example, if you are using {LightspeedshortName} both as an organization administrator and an end user, you can test the custom model for select Ansible users before making it available for all users in your organization. 
+Using the *model-override* setting in the Ansible VS Code extension, select Ansible users only can override the default model setting and tune their Ansible Lightspeed service to use the custom model. 
 
 == Configuring the custom model for all Ansible users in your organization
 
@@ -30,7 +30,7 @@ You can configure the custom model as the default model for your organization, s
 .. Click *Save*.  
 
 == Configuring the custom model for select Ansible users in your organization
-Using the *model-override* setting in Ansible Visual Studio (VS) Code, you can configure the custom model and make it available for select Ansible users only. For example, If you are using {LightspeedshortName} as both an organization administrator and an end user, you can test the custom model for select Ansible users before making it available for all users in your organization. 
+Using the *model-override* setting in the Ansible VS Code extension, select Ansible users only can override the default model setting and tune their Ansible Lightspeed service to use the custom model. For example, If you are using {LightspeedshortName} as both an organization administrator and an end user, you can test the custom model for select Ansible users before making it available for all users in your organization. 
 
 .Procedure
 
