--- a/lightspeed/modules/proc_generate-training-data-set.adoc
+++ b/lightspeed/modules/proc_generate-training-data-set.adoc
@@ -4,7 +4,7 @@
 
 = Generating a custom model training data set
 
-After installing {AnsibleContentParser}, run it to scan your custom Ansible files and generate a custom model training data set. The training data set includes a list of Ansible files and their paths relative to the project root. You can then upload the training data set to {ibmwatsonxcodeassistant} and create a custom model for your organization. If you used ansible-lint preprocessing and encountered rule violations, you must xref:resolve-ansible-lint-rule-violations_configuring-custom-models[resolve the rule violations] before uploading the training data set to {ibmwatsonxcodeassistant}.
+After installing the {AnsibleContentParser}, run it to scan your custom Ansible files and generate a custom model training data set. You can then upload the training data set to {ibmwatsonxcodeassistant} and create a custom model for your organization. If you used ansible-lint preprocessing and encountered rule violations, you must xref:resolve-ansible-lint-rule-violations_configuring-custom-models[resolve the rule violations] before uploading the training data set to {ibmwatsonxcodeassistant}.
 
 == Methods of generating a training data set
 You can generate a training data set by using one of the following methods:
@@ -19,8 +19,8 @@ You can generate a training data set without ansible-lint preprocessing. In this
 
 .Prerequisites
 
-* You must have installed {AnsibleContentParser} on your computer.
-* You must have verified that the version of ansible-lint that is installed with the content parser tool is the same as that of the previously-installed ansible-lint.
+* You must have installed the {AnsibleContentParser} on your computer.
+* You must have verified that the version of ansible-lint that is installed with the {AnsibleContentParser} is the same as that of the previously-installed ansible-lint.
 
 .Procedure
 
