--- a/lightspeed/assemblies/assembly_configuring-custom-models.adoc
+++ b/lightspeed/assemblies/assembly_configuring-custom-models.adoc
@@ -20,7 +20,7 @@ You can configure the custom model as the default model for your organization. A
 
 * Enable access for select Ansible users in your organization
 +
-Using the model-override setting in the Ansible VS Code extension, select Ansible users only can override the default model setting and tune their Ansible Lightspeed service to use the custom model. 
+Using the *model-override* setting in the Ansible VS Code extension, select Ansible users can tune their Ansible Lightspeed service to use the custom model instead of the default model. 
  
 
 == Process for configuring custom models
