--- a/lightspeed/modules/proc_configure-custom-models-lightspeed.adoc
+++ b/lightspeed/modules/proc_configure-custom-models-lightspeed.adoc
@@ -10,11 +10,11 @@ You can specify one of the following configurations for using the custom model:
 
 * *Enable access for all users in your organization*
 +
-You can configure the custom model as the default model for your organization. All users in your organization can use the custom model. 
+You can configure a custom model as the default model for your organization. All users in your organization can use the custom model. 
 
 * *Enable access for select Ansible users in your organization*
 +
-Using the *model-override* setting, you can configure the custom model and make it available for select Ansible users only. For example, if you are using {LightspeedshortName} both as an organization administrator and an end user, you can test the custom model for select Ansible users before making it available for all users in your organization. 
+Using the *model-override* setting in the Ansible VS Code extension, select Ansible users can tune their Ansible Lightspeed service to use a custom model instead of the default model. 
 
 == Configuring the custom model for all Ansible users in your organization
 
@@ -30,7 +30,7 @@ You can configure the custom model as the default model for your organization, s
 .. Click *Save*.  
 
 == Configuring the custom model for select Ansible users in your organization
-Using the *model-override* setting in Ansible Visual Studio (VS) Code, you can configure the custom model and make it available for select Ansible users only. For example, If you are using {LightspeedshortName} as both an organization administrator and an end user, you can test the custom model for select Ansible users before making it available for all users in your organization. 
+Using the *model-override* setting in the Ansible VS Code extension, select Ansible users can tune their Ansible Lightspeed service to use a custom model instead of the default model. For example, If you are using {LightspeedshortName} as both an organization administrator and an end user, you can test the custom model for select Ansible users before making it available for all users in your organization. 
 
 .Procedure
 
