Create new ports and network routing table
Correction

Inconsistencies in firewall documentation

https://issues.redhat.com/browse/AAP-21720

--- a/downstream/assemblies/platform/assembly-network-ports-protocols.adoc
+++ b/downstream/assemblies/platform/assembly-network-ports-protocols.adoc
@@ -17,7 +17,7 @@ In some of the following use cases, hop nodes are used instead of a direct link 
 .{PlatformNameShort} Network ports and protocols 
 image::aap-network-ports-protocols.png[Interaction of Ansible Automation Platform components on the network with information about the ports and protocols that are used.]
 
-TThe following table indicates the destination port and the direction of network traffic:
+The following table indicates the destination port and the direction of network traffic:
 
 [NOTE]
 The following default destination ports and installer inventory listed are configurable. If you choose to configure them to suit your environment, you might experience a change in behavior.
