--- a/downstream/assemblies/platform/assembly-aap-backup.adoc
+++ b/downstream/assemblies/platform/assembly-aap-backup.adoc
@@ -9,7 +9,7 @@ ifdef::context[:parent-context: {context}]
 
 [role="_abstract"]
 
-Backing up your {PlatformName} deployment involves creating backup resources for your deployed instances. Use these procedures to create backup resources for your {PlatformName} deployment.
+Backing up your {PlatformName} deployment involves creating backup resources for your deployed instances. Use the following procedures to create backup resources for your {PlatformName} deployment.
 
 //part of 2.5 release, (AAP-22178) uncomment when publishing [gmurray]
 //include::platform/proc-aap-platform-gateway-backup.adoc[leveloffset=+1]
