--- a/downstream/assemblies/platform/assembly-aap-recovery.adoc
+++ b/downstream/assemblies/platform/assembly-aap-recovery.adoc
@@ -7,7 +7,7 @@ ifdef::context[:parent-context: {context}]
 :context: aap-recovery
 
 [role="_abstract"]
-If you lose information on your system or experience issues with an upgrade, you can use the backup resources of your deployment instances. Use these procedures to recover your {PlatformNameShort} deployment files.
+If you lose information on your system or experience issues with an upgrade, you can use the backup resources of your deployment instances. Use the following procedures to recover your {PlatformNameShort} deployment files.
 
 //part of 2.5 release, (AAP-22178) uncomment when publishing [gmurray]
 //include::platform/proc-aap-platform-gateway-restore.adoc[leveloffset=+1]
