--- a/downstream/modules/platform/ref-accessing-control-auto-hub-eda-control.adoc
+++ b/downstream/modules/platform/ref-accessing-control-auto-hub-eda-control.adoc
@@ -1,54 +1,72 @@
 :_mod-docs-content-type: REFERENCE
 
-[id="accessing-control-auto-hub-eda-control_{context}"]
+[id="accessing-gateway_{context}"]
 
-= Accessing {ControllerName}, {HubName}, and {EDAcontroller}
+= Accessing platform gateway
 
 [role="_abstract"]
 
 
-After the installation completes, these are the default protocol and ports used:
+After the installation completes, the default protocol and ports used for platform gateway are 80 (http) and 443 (https).
 
-* http/https protocol
-
-* Ports 8080/8443 for {ControllerName}
-
-* Ports 8081/8444 for {HubName}
-
-* Ports 8082/8445 for {EDAcontroller}
-
-
-These can be changed. Consult the *README.md* for further details. It is recommended that you leave the defaults unless you need to change them due to port conflicts or other factors.
-
-
-.Accessing {ControllerName} UI
-
-The {ControllerName} UI is available by default at:
+You can customize the ports with the following variables:
 
 ----
-https://<your_rhel_host>:8443
+gateway_nginx_http_port: 8500
+
+gateway_nginx_https_port: 8501
 ----
 
-Log in as the admin user with the password you created for *controller_admin_password*.
-
-If you supplied the license manifest as part of the installation, the {PlatformNameShort} dashboard is displayed. If you did not supply a license file, the *Subscription* screen is displayed where you must supply your license details. This is documented here: link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_operations_guide/assembly-aap-activate[Chapter 1. Activating Red Hat Ansible Automation Platform]. 
-
-.Accessing {HubName} UI
-
-The {HubName} UI is available by default at:
+If you want to disable https, set `gateway_nginx_disable_https` to `true`:
 
 ----
-https://<hub node>:8444
+gateway_nginx_disable_https: true
 ----
 
-Log in as the admin user with the password you created for *hub_admin_password*.
+[NOTE]
+====
+Consult the *README.md* for further details. Leave the defaults unless you need to change them due to port conflicts or other factors.
+====
 
+.Accessing platform gateway UI
 
-.Accessing {EDAName} UI
+The platform gateway UI is available by default at:
 
-The {EDAName} UI is available by default at:
 ----
-https://<eda node>:8445
+https://<gateway-node>:443
 ----
 
-Log in as the admin user with the password you created for *eda_admin_password*.
+Log in as the admin user with the password you created for *gateway_admin_password*.
+
+// Michelle: Removing additional component UI references as platform gateway UI will be used going forward - AAP-18760
+// .Accessing {ControllerName} UI
+
+// The {ControllerName} UI is available by default at:
+
+// ----
+// https://<controller-node>:8443
+// ----
+
+// Log in as the admin user with the password you created for *controller_admin_password*.
+
+// If you supplied the license manifest as part of the installation, the {PlatformNameShort} dashboard is displayed. If you did not supply a license file, the *Subscription* screen is displayed where you must supply your license details. This is documented here: link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_operations_guide/assembly-aap-activate[Chapter 1. Activating {PlatformName}]. 
+
+// .Accessing {HubName} UI
+
+// The {HubName} UI is available by default at:
+
+// ----
+// https://<hub node>:8444
+// ----
+
+// Log in as the admin user with the password you created for *hub_admin_password*.
+
+
+// .Accessing {EDAName} UI
+
+// The {EDAName} UI is available by default at:
+// ----
+// https://<eda node>:8445
+// ----
+
+// Log in as the admin user with the password you created for *eda_admin_password*.
