Update VM install guide to incorporate gateway
Update VM install product docs to incorporate Gateway

https://issues.redhat.com/browse/AAP-17771

--- a/downstream/assemblies/platform/assembly-system-requirements.adoc
+++ b/downstream/assemblies/platform/assembly-system-requirements.adoc
@@ -14,6 +14,7 @@ Use this information when planning your {PlatformName} installations and designi
 * You have configured an NTP client on all nodes. For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_upgrade_and_migration_guide/migrate-isolated-execution-nodes#automation_controller_configuration_requirements[Configuring NTP server using Chrony].
 
 include::platform/ref-system-requirements.adoc[leveloffset=+1]
+include::platform/ref-gateway-system-requirements.adoc[leveloffset=+1]
 include::platform/ref-controller-system-requirements.adoc[leveloffset=+1]
 include::platform/ref-automation-hub-requirements.adoc[leveloffset=+1]
 include::platform/ref-ha-hub-reqs.adoc[leveloffset=+2]
