--- a/downstream/modules/platform/proc-running-setup-script.adoc
+++ b/downstream/modules/platform/proc-running-setup-script.adoc
@@ -3,7 +3,7 @@
 = Running the {PlatformName} installer setup script
 
 [role="_abstract"]
-After you update the inventory file with required parameters for installing your {PrivateHubName}, run the installer setup script.
+After you update the inventory file with required parameters, run the installer setup script.
 
 .Procedure
 
