--- a/downstream/modules/platform/proc-upgrading-between-minor-aap-releases.adoc
+++ b/downstream/modules/platform/proc-upgrading-between-minor-aap-releases.adoc
@@ -9,7 +9,7 @@
 
 [role="_abstract"]
 
-To upgrade between minor releases of {PlatformNameShort} 2, use this general workflow.
+To upgrade between minor releases of {PlatformNameShort} 2 on your {VMBase}, use this general workflow.
 
 .Procedure
 
