--- a/downstream/assemblies/platform/assembly-appendix-inventory-file-vars.adoc
+++ b/downstream/assemblies/platform/assembly-appendix-inventory-file-vars.adoc
@@ -13,3 +13,4 @@ include::platform/ref-hub-variables.adoc[leveloffset=+1]
 include::platform/ref-controller-variables.adoc[leveloffset=+1]
 include::platform/ref-ansible-inventory-variables.adoc[leveloffset=+1]
 include::platform/ref-eda-controller-variables.adoc[leveloffset=+1]
+include::platform/ref-gateway-variables.adoc[leveloffset=+1]
