--- a/downstream/assemblies/platform/assembly-disconnected-installation.adoc
+++ b/downstream/assemblies/platform/assembly-disconnected-installation.adoc
@@ -50,7 +50,8 @@ include::platform/proc-building-the-custom-execution-environment.adoc[leveloffse
 
 include::platform/proc-uploading-the-custom-execution-environment-to-the-private-hub.adoc[leveloffset=+2]
 
-include::platform/proc-upgrading-between-minor-aap-releases.adoc[leveloffset=+1]
+// Removing references to upgrades for 2.5-ea - AAP-17771
+// include::platform/proc-upgrading-between-minor-aap-releases.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
